# mosaic

./: .travis.yml  CMakeLists.txt  Page1.qml  Page1Form.ui.qml  README.md  compiler_config.pri  imageprovider.cpp  main.cpp  main.qml  mosaic.pro  mosaic_all.pro  sourceimages.cpp
mosaic_app/: CMakeLists.txt  InputSelection.qml  JPEGFileChooser.qml  MosaicFlippable.qml  MosaicMonitor.qml  imageprovider.cpp  imageprovider.h  main.cpp  main.qml  maindriver.cpp  maindriver.h  mosaic_app.pro  qml.qrc  sourceimages.cpp  sourceimages.h  thumbnail.cpp  thumbnail.h
mosaic_cmd/: CMakeLists.txt  main.cpp  mosaic_cmd.pro
mosaic_engine/: .foo.h.swp  .mosaic_engine.pro.swp  CMakeLists.txt  badness.h  badnesscomposite.cpp  badnesscomposite.h  engine_resources.qrc  evolutionrunner.cpp  evolutionrunner.h  foo.cpp  foo.h  fshader.glsl  fshader_outline.glsl  fshader_target_image.glsl  imageutilities.cpp  imageutilities.h  interactionhelpers.cpp  interactionhelpers.h  interactiontileborder.cpp  interactiontileborder.h  interactiontiletile.cpp  interactiontiletile.h  lennardjones.cpp  lennardjones.h  maindriver.cpp  maindriver.h  mosaic_engine.pro  mosaicevolution.cpp  mosaicevolution.h  mosaicimageprovider.cpp  mosaicimageprovider.h  mosaicmodel.cpp  mosaicmodel.h  mosaicrenderer.cpp  mosaicrenderer.h  mosaictargetcorrelation.cpp  mosaictargetcorrelation.h  mosaicupdate.cpp  mosaicupdate.h  mosaicupdatedelay.cpp  (+24 more)
tests/: CMakeLists.txt  test_case.pri  tests.pro
tests/badnesscomposite_test/: badnesscomposite_test.cpp  badnesscomposite_test.pro
tests/foo_test/: foo_test.cpp  foo_test.pro
tests/imageutility_test/: distancebetweenimages_test.cpp  gaussianblur_test.cpp  imageutility_test.pro  testimages.qrc
tests/interactiontileborder_test/: interactiontileborder_test.cpp  interactiontileborder_test.pro
tests/interactiontiletile_test/: interactiontiletile_test.cpp  interactiontiletile_test.pro  lennardjonesintegration_test.cpp
tests/lennardjones_test/: lennardjones_test.cpp  lennardjones_test.pro
tests/mosaicevolution_test/: mosaicevolution_test.cpp  mosaicevolution_test.pro
tests/mosaicmodel_test/: mosaicmodel_test.cpp  mosaicmodel_test.pro
tests/mosaictargetcorrelation_test/: mosaictargetcorrelation_test.cpp  mosaictargetcorrelation_test.pro
tests/mosaicview_test/: mosaicview_test.cpp  mosaicview_test.pro
tests/mosaicviewrenderer_test/: mosaicviewrenderer_test.cpp  mosaicviewrenderer_test.pro
tests/quadrature_test/: quadrature_test.cpp  quadrature_test.pro
tests/targetimage_test/: targetimage_test.cpp  targetimage_test.pro
tests/test_utilities/: test_utilities.cpp  test_utilities.h  test_utilities.pro
tests/tiletargetcorrelation_test/: tiletargetcorrelation_test.cpp  tiletargetcorrelation_test.pro
tools/: _VSC_clang.bat
