cmake_minimum_required(VERSION 3.0.0)

# add_executable(mosaicviewrenderer_test mosaicviewrenderer_test/mosaicviewrenderer_test.cpp)
# target_link_libraries(mosaicviewrenderer_test gtest)

# target_include_directories(mosaicviewrenderer_test  "D:/mariusz/pulpit/gity/_kasuj/offscreen_render/mosaic/thirdparty/googletest-release-1.7.0/include") 
